userapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userapi
  namespace: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userapi
  template:
    metadata:
      labels:
        app: userapi
    spec:
      containers:
        - name: userapi
          image: userapi:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
