userapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: userapi-service
  namespace: traefik
spec:
  selector:
    app: userapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
