userapi-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: userapi-httproute
  namespace: traefik
spec:
  parentRefs:
    - name: traefik-gateway
  hostnames:
    - "userapi.docker.localhost"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: userapi-service
          port: 80
